2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/e.t: Use UTF-8 instead of ISO-8859-1 to encode umlauts.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs
	* t/e.t: Add Glib::ParamSpec->value_validate.  Patch by Kevin
	Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/options.t: Don't use UTF-8 umlauts unconditionally as this
	causes trouble on non-UTF-8 locales.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm: Add
	Glib::MakeHelper->postamble_precompiled_headers to generate a make
	target for precompiling headers.

	* Makefile.PL: Use the above to create a 'precompiled-headers'
	target that precompiles gperl.h.  This speeds up the compilation
	of Glib by 16% on my machine.

2008-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* t/c.t: Allow calling Glib::Flags::as_arrayref directly, as an
	alternative to the @{} syntax.  Patch by Kevin Ryde.

2008-11-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.211.

2008-11-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs
	* GOption.xs (added)
	* gperl.h
	* Makefile.PL
	* MANIFEST
	* t/options.t (added)
	* typemap: Add Glib::OptionContext and Glib::OptionGroup, wrapping
	glib's command line option parser.

2008-11-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* gperl-private.h: Don't include perl.h.  This header is always
	included after gperl.h which includes everything already.  And
	including perl.h alone doesn't work and isn't enough anyway.

2008-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs (gperl_register_boxed): Use the copy of the passed-in
	package name for the key of info_by_package to avoid problems when
	the package name is dynamically allocated.

	* GBoxed.xs (gperl_register_boxed)
	* GObject.xs (gperl_register_object)
	* GType.xs (gperl_register_fundamental): Always insert into the
	lookup tables in the correct order to avoid prematurely freeing